--- a/app/design/frontend/default/rooja/template/catalog/category/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/category/view.phtml
@@ -71,7 +71,7 @@ $expired = 1;
 	    <?php endif; ?>
 
 		<div class="shareThis">
-			<h4>Share this sale with your friends</h4>
+			<h4>Share with your friends</h4>
 			<!-- AddThis Button BEGIN -->
 			<div class="addthis_toolbox addthis_default_style" addthis:title="<?php echo $_helper->categoryAttribute($_category, $_category->getName(), 'name') ?>" addthis:description="Like my pick? Visit Rooja.com now and get access to top designer brands at upto 60% off retail. The website requires membership. Good news: membership is free. :)">
 			<a class="addthis_button_facebook"><img src="<?php echo $this->getSkinUrl('images/icons/facebook-blue-24.png'); ?>" alt="facebook icon"></a>
