--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -50,8 +50,7 @@ foreach ($categories as $_category){
 						if($i == 3){
 							?>
 							<article class="homeAd fl masonry">
-								<h3><a href="/rewardsref/customer/index/">Invite a Friend</a></h3>
-								<p>Share what&rsquo;s in with your friends on Facebook! Invite a friend and receive $25 to spend on Rooja!</p>
+								<a href="/rewardsref/customer/index/"><img src="<?php echo $this->getSkinUrl('images/graphics/spreadthelove.jpg'); ?>" alt="Invite Friends and get cash" /></a>
 							</article>
 							<article class="homeSale size3 fl masonry">
 				                <a href="<?php echo  $c->getURL() ?>" title="View sale details for: <?php echo $c->getName(); ?>" class="product-image"><img src="/media/catalog/category/<?php echo $c->getThumbnail(); ?>" alt="" width="236px" /></a>
