--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -234,7 +234,7 @@ p.question{margin:0;font-weight:bold;color:#431f4c;}
 .size3{height:119px;}
 
 .homeSale h2{color:#fff !important;font-size:2em;padding:15px 10px;display:block;width:222px;background:url(../images/bgs/purp-opacity-photo-diag.png) repeat;position:absolute;bottom:0px;z-index:10;margin: 0;}
-.homeSale p{position:absolute;top:0;display:block;padding:5px;background:url(../images/bgs/gray-opacity-photo-diag.png) repeat;width:100%;}
+.homeSale p{position:absolute;top:0;display:block;padding:5px;background:url(../images/bgs/pink-diag.png.png) repeat;width:100%;font-size:1.8em;font-weight:bold;}
 
 .homeAd{background:url(../images/bgs/orange-diag.png) repeat;padding: 10px;width:217px;height:  95px;color:#fff;}
 .homeAd h3 a{text-transform:uppercase;font-size:14px;text-decoration:underline;margin-bottom:5px;color:#fff;font-weight:normal;}
