--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -145,7 +145,7 @@ $numProducts = $this->getNumProducts() ? $this->getNumProducts() : 20;
 <?php endif; */ ?>
 <script type="text/javascript">
 	jQuery(document).ready(function(){
-		jQuery(".homeSale").hide();
+		jQuery(".homeSale p").hide();
 		jQuery(".homeSale").hover(function () {
 		    jQuery(this).find('p').fadeToggle(500);
 		  });
