--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -336,10 +336,10 @@ h2#saleDetails{color:#c60;margin:22px 0 5px;}
 .shipping{display:none;}
 .details{display:block;margin:15px 0 0;}
 
-.more-views{display:block;}
-.more-views ul li{float:left;margin-right:10px;}
+.more-views{display:block;float:left;}
+.more-views ul li{/*float:left;*/margin-right:10px;}
 
-#gallery .product-image-zoom{position:relative;width:480px;height:640px;overflow:hidden;}
+#gallery .product-image-zoom{position:relative;width:395px;height:640px;overflow:hidden;}
 #gallery .product-image-zoom img{position:absolute;top:0;left:0;}
 
 /* ~~~~~ Typography ~~~~~ */
