--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -336,7 +336,7 @@ h2#saleDetails{color:#c60;margin:22px 0 5px;}
 .shipping{display:none;}
 .details{display:block;margin:15px 0 0;}
 
-.more-views{display:block;float:left;}
+.more-views{display:block;float:left;width:75px;}
 .more-views ul li{/*float:left;*/margin-right:10px;}
 
 #gallery .product-image-zoom{position:relative;width:395px;height:640px;overflow:hidden;}
