move product views to side

--- a/app/design/frontend/default/rooja/template/catalog/product/view/media.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view/media.phtml
@@ -66,7 +66,6 @@ function slide(url,num,gallery){
 			 afterFinish: function(){
 			 	$('image').writeAttribute('src',url).setOpacity(1).observe('click',function(e){
 				 	Event.stop(e);
-			 		popWin(gallery, 'gallery', 'width=300,height=300,left=50,top=50,location=no,status=yes,scrollbars=yes,resizable=yes'); 
 			 		return false;
 				 })
 			 	dummy.remove();
@@ -95,7 +94,7 @@ return false;
 <?php endif; ?>
 <p class="product-image-zoom">
 	<?php
-		$_img = '<img id="image" src="'.$this->helper('catalog/image')->init($_product, 'image')->keepFrame(false)->resize($_resize).'" alt="'.$this->htmlEscape($this->getImageLabel()).'" title="'.$this->htmlEscape($this->getImageLabel()).'" onclick="popWin(\''.$this->getGalleryUrl().'.\', \'gallery\', \'width=300,height=300,left=50,top=50,location=no,status=yes,scrollbars=yes,resizable=yes\'); return false;" />';
+		$_img = '<img id="image" src="'.$this->helper('catalog/image')->init($_product, 'image')->keepFrame(false)->resize($_resize).'" alt="'.$this->htmlEscape($this->getImageLabel()).'" title="'.$this->htmlEscape($this->getImageLabel()).'" />';
         echo $_helper->productAttribute($_product, $_img, 'image')
     ?>
     <img id="slide-loader" src="<?php echo $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" />
