remove remove button

--- a/app/design/frontend/default/rooja/template/checkout/cart.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart.phtml
@@ -53,7 +53,7 @@
     <form action="<?php echo $this->getUrl('checkout/cart/updatePost') ?>" method="post">
         <fieldset>
             <table id="shopping-cart-table" class="data-table cart-table">
-                <col width="1" />
+                <!--<col width="1" />-->
                 <col />
                 <col width="1" />
             <?php if ($this->helper('wishlist')->isAllowInCart()) : ?>
