remove remove button

--- a/app/design/frontend/default/rooja/template/rewards/checkout/cart/item/default_m1501.phtml
+++ b/app/design/frontend/default/rooja/template/rewards/checkout/cart/item/default_m1501.phtml
@@ -166,6 +166,7 @@ $isVisibleProduct = $_item->getProduct()->isVisibleInSiteVisibility();
     <?php endif; ?>
     <td class="a-center">
         <input name="cart[<?php echo $_item->getId() ?>][qty]" value="<?php echo $this->getQty() ?>" size="4" title="<?php echo $this->__('Qty') ?>" class="input-text qty" maxlength="12" />
+<a href="<?php echo $this->getDeleteUrl()?>" title="<?php echo $this->__('Remove item')?>" class="btn-remove btn-remove2"><?php echo $this->__('Remove item')?></a>
     </td>
 
 <!-- // WDCA CODE BEGINS:  // -->
