--- a/app/design/frontend/default/rooja/template/page/html/header.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/header.phtml
@@ -49,6 +49,7 @@
 <?php echo $this->getChildHtml('topMenu') ?>
 
 */ ?>
+<div id="wrap">
 <header id="mainHeader">
 	<div class="container">
 	<h2 id="logo"><a href="/index.php" class="tr">Rooja Fashion</a></h2>
@@ -138,3 +139,4 @@ if($session->isLoggedIn()) {$customer = $session->getCustomer();}
 	<?php } ?>
 	</div>
 </header><!--End Header-->
+<div id="mainContentWrap">
