--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -19,12 +19,32 @@ Borders:
 */
 
 body{
-	font-family: arial, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: .625em;
 	line-height:.625em;
 	color:#000;
 	background:;
 }
+html, body {height: 100%;}
+
+#wrap {min-height: 100%;}
+
+#mainContentWrap {overflow:auto;
+	padding-bottom: 218px;}  /* must be same height as the footer */
+
+#mainFooter {position: relative;
+	margin-top: -218px; /* negative value of footer height */
+	height: 218px;
+	clear:both;} 
+
+/*Opera Fix*/
+body:before {
+	content:"";
+	height:100%;
+	float:left;
+	width:0;
+	margin-top:-32767px;/
+
 
 .container{margin: 0 auto;width:980px;padding:0 10px;}
 
