--- a/app/design/frontend/default/rooja/template/page/product.phtml
+++ b/app/design/frontend/default/rooja/template/page/product.phtml
@@ -50,14 +50,14 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn() && ($agent !="facebooke
 } ?>
 <body<?php echo $this->getBodyClass()?' class="'.$this->getBodyClass().'"':'' ?>>
 <?php echo $this->getChildHtml('after_body_start') ?>
-<div class="wrapper">
+<!-- <div class="wrapper"> -->
     <?php echo $this->getChildHtml('global_notices') ?>
         <?php echo $this->getChildHtml('header') ?>
                     <?php echo $this->getChildHtml('global_messages') ?>
                     <?php echo $this->getChildHtml('content') ?>
         <?php echo $this->getChildHtml('footer') ?>
         <?php echo $this->getChildHtml('before_body_end') ?>
-</div>
+<!-- </div> -->
 <?php echo $this->getAbsoluteFooter() ?>
 </body>
 </html>
