--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -356,8 +356,8 @@ h2#saleDetails{color:#c60;margin:22px 0 5px;}
 .shipping{display:none;}
 .details{display:block;margin:15px 0 0;}
 
-.more-views{display:block;float:left;width:75px;}
-.more-views ul li{/*float:left;*/margin-right:10px;}
+.more-views{display:block;float:left;width:75px;margin-right:10px;}
+.more-views ul li{/*float:left;*/}
 
 #gallery .product-image-zoom{position:relative;width:395px;height:640px;overflow:hidden;}
 #gallery .product-image-zoom img{position:absolute;top:0;left:0;}
