need assistance button

--- a/app/design/frontend/default/rooja/template/catalog/category/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/category/view.phtml
@@ -54,7 +54,7 @@ $expired = 1;
 <section id="saleDetails">
 	<div class="container">
 		<a href="/" class="backTo fl" title="Back to Home">Back to home</a>
-		<a href="#" class="needAssistance fr" title="Need Assitance? Talk to a live rep" class="fr"><img src="<?php echo $this->getSkinUrl('images/icons/question-mark.png'); ?>" alt="Question mark icon"> Need Assistance</a>
+		<a href="#mainFooter" class="needAssistance fr" title="Need Assitance? Talk to a live rep" class="fr"><img src="<?php echo $this->getSkinUrl('images/icons/question-mark.png'); ?>" alt="Question mark icon"> Need Assistance</a>
 		
 	<section id="saleInfo" class="col1 fl clear">
 		<h1><?php echo $_helper->categoryAttribute($_category, $_category->getName(), 'name') ?></h1>
