--- a/app/design/frontend/default/rooja/template/page/html/head.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/head.phtml
@@ -117,3 +117,8 @@
   })();
 
 </script>
+<script type="text/javascript">
+jQuery('.needAssistance').click(function() {
+  olark('api.box.expand');
+});
+</script>
