need assistance button

--- a/app/design/frontend/default/rooja/template/page/html/head.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/head.phtml
@@ -118,7 +118,9 @@
 
 </script>
 <script type="text/javascript">
-jQuery('.needAssistance').click(function() {
-  olark('api.box.expand');
+jQuery(document).ready(function(){
+	jQuery('.needAssistance').click(function() {
+  		olark('api.box.expand');
+	});
 });
 </script>
