need assistance button

--- a/app/design/frontend/default/rooja/template/page/html/head.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/head.phtml
@@ -121,6 +121,7 @@
 jQuery(document).ready(function(){
 	jQuery('.needAssistance').click(function() {
   		olark('api.box.expand');
+		return false;
 	});
 });
 </script>
