brand logos and email issue fix

--- a/app/design/frontend/base/default/template/rewardsref/customer/referral.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral.phtml
@@ -1,6 +1,6 @@
 <div class="referrals">
     
-        <h1><?php echo $this->__('Invite a Friend') ?></h1>
+        <h1>Invite a Friend</h1>
 
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
 
