--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
@@ -18,7 +18,7 @@
             <div class="input-box" >
                 <label for="to">To</label>
                <br/>
-                                <textarea name="contacts" id="recipient_list" class="rewardsref_recipient_list" rows="7">Enter email addresses separated by commas</textarea>
+                                <textarea name="contacts" id="recipient_list" class="rewardsref_recipient_list" rows="7"></textarea>
                                 <br/>
                                 <?php echo $this->getChildHtml('plaxo_contact_chooser'); ?>
                             
