--- a/app/design/frontend/base/default/template/customer/widget/name.phtml
+++ b/app/design/frontend/base/default/template/customer/widget/name.phtml
@@ -64,7 +64,7 @@ For checkout/onepage/shipping.phtml:
     </div>
 <?php endif; ?>
     <div class="field name-firstname">
-        <label for="<?php echo $this->getFieldId('firstname')?>" class="required"><em>*</em><?php echo $this->__('First Name') ?></label>
+        <label for="<?php echo $this->getFieldId('firstname')?>" class="required"><?php echo $this->__('First Name') ?>*</label>
         <div class="input-box">
             <input type="text" id="<?php echo $this->getFieldId('firstname')?>" name="<?php echo $this->getFieldName('firstname')?>" value="<?php echo $this->htmlEscape($this->getObject()->getFirstname()) ?>" title="<?php echo $this->__('First Name') ?>" class="input-text required-entry" <?php echo $this->getFieldParams() ?> />
         </div>
@@ -78,7 +78,7 @@ For checkout/onepage/shipping.phtml:
     </div>
 <?php endif; ?>
     <div class="field name-lastname">
-        <label for="<?php echo $this->getFieldId('lastname')?>" class="required"><em>*</em><?php echo $this->__('Last Name') ?></label>
+        <label for="<?php echo $this->getFieldId('lastname')?>" class="required"><?php echo $this->__('Last Name') ?>*</label>
         <div class="input-box">
             <input type="text" id="<?php echo $this->getFieldId('lastname')?>" name="<?php echo $this->getFieldName('lastname')?>" value="<?php echo $this->htmlEscape($this->getObject()->getLastname()) ?>" title="<?php echo $this->__('Last Name') ?>" class="input-text required-entry" <?php echo $this->getFieldParams() ?> />
         </div>
