--- a/app/design/frontend/default/rooja/template/customer/form/register.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/register.phtml
@@ -31,6 +31,21 @@
  * @see Mage_Customer_Block_Form_Register
  */
 ?>
+<script src="/js/jquery.defaultvalue.js" type="text/javascript"></script> 
+<script type="text/javascript">
+$(function() {
+	
+	$('input[type="text"]').defaultValue();
+	
+	setTimeout(function() {
+		// Chrome does not fire a change event when autofilling forms
+		// To prevent weird overlap with defaultValue and Chrome autofill,
+		// fire your own change event after 100 or so milliseconds
+		$('input[type="text"]').change();
+	}, 100);
+	
+});
+</script>
 <div id="notifyWrapper" class="register">
 <div class="wrapper">
 <header id="mainHeader">
