--- a/app/design/frontend/base/default/template/customer/widget/name.phtml
+++ b/app/design/frontend/base/default/template/customer/widget/name.phtml
@@ -68,16 +68,16 @@ For checkout/onepage/shipping.phtml:
         <div class="input-box">
             <input type="text" id="<?php echo $this->getFieldId('firstname')?>" name="<?php echo $this->getFieldName('firstname')?>" value="<?php echo $this->htmlEscape($this->getObject()->getFirstname()) ?>" title="<?php echo $this->__('First Name') ?>" class="input-text required-entry" <?php echo $this->getFieldParams() ?> />
         </div>
-    </div>
-<?php if ($this->showMiddlename()): ?>
-    <div class="field name-middlename">
+    </div><!--
+--><?php if ($this->showMiddlename()): ?><!--
+    --><div class="field name-middlename">
         <label for="<?php echo $this->getFieldId('middlename')?>"><?php echo $this->__('M.I.') ?></label>
         <div class="input-box">
             <input type="text" id="<?php echo $this->getFieldId('middlename')?>" name="<?php echo $this->getFieldName('middlename')?>" value="<?php echo $this->htmlEscape($this->getObject()->getMiddlename()) ?>" title="<?php echo $this->__('M.I.') ?>" class="input-text" <?php echo $this->getFieldParams() ?> />
         </div>
-    </div>
-<?php endif; ?>
-    <div class="field name-lastname">
+    </div><!--
+--><?php endif; ?><!--
+    --><div class="field name-lastname">
         <label for="<?php echo $this->getFieldId('lastname')?>" class="required"><?php echo $this->__('Last Name') ?>*</label>
         <div class="input-box">
             <input type="text" id="<?php echo $this->getFieldId('lastname')?>" name="<?php echo $this->getFieldName('lastname')?>" value="<?php echo $this->htmlEscape($this->getObject()->getLastname()) ?>" title="<?php echo $this->__('Last Name') ?>" class="input-text required-entry" <?php echo $this->getFieldParams() ?> />
