--- a/app/design/frontend/default/rooja/template/customer/form/register.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/register.phtml
@@ -35,7 +35,7 @@
 <script type="text/javascript">
 jQuery(function() {
 	
-	jQuery('input[type="text"]').defaultValue();
+	jQuery('input[type="text"], input[type="password"]').defaultValue();
 	
 	setTimeout(function() {
 		// Chrome does not fire a change event when autofilling forms
