more work on signup form

--- a/app/design/frontend/default/rooja/template/customer/form/register.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/register.phtml
@@ -53,7 +53,7 @@ jQuery(function() {
 	<p id="highlight" class="tr">Apparel and accessories from leading International and Indian designers at prices you just can’t get in the stores</p>
 </header><!--End Header-->
 <section id="content" class="body">
-        <h2 class="legend"><?php echo $this->__('Create an Account') ?></h2>
+    <h2 id="create-an-account" class="tr"><?php echo $this->__('Create an Account') ?></h2>
     <?php echo $this->getChildHtml('form_fields_before')?>
     <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
     <form action="<?php echo $this->getPostActionUrl() ?>" method="post" id="form-validate">
