more work on signup form

--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -152,3 +152,14 @@ strong{font-weight:bold;}
 
 
 
+.defaultvalue_label {
+	opacity: 0.75 !important;
+}
+.defaultvalue_label_focus {
+	opacity: 0.5 !important;
+}
+
+
+
+
+
