--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -153,10 +153,10 @@ strong{font-weight:bold;}
 
 
 .defaultvalue_label {
-	opacity: 0.75 !important;
+	opacity: rgba(46,26,51,0.75) !important;
 }
 .defaultvalue_label_focus {
-	opacity: 0.5 !important;
+	opacity: rgba(46,26,51,0.5) !important;
 }
 
 
