--- a/app/design/frontend/default/rooja/template/customer/form/register.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/register.phtml
@@ -176,9 +176,9 @@ jQuery(function() {
 
 
 				        <?php if ($this->isNewsletterEnabled()): ?>
-				        <li class="control">
+				        <li class="control" style="display: none;">
 				            <div class="input-box">
-				                <input type="checkbox" name="is_subscribed" title="<?php echo $this->__('Sign Up for Newsletter') ?>" value="1" id="is_subscribed"<?php if($this->getFormData()->getIsSubscribed()): ?> checked="checked"<?php endif; ?> class="checkbox" />
+				                <input type="checkbox" name="is_subscribed" title="<?php echo $this->__('Sign Up for Newsletter') ?>" value="1" checked="checked" id="is_subscribed"<?php if($this->getFormData()->getIsSubscribed()): ?> checked="checked"<?php endif; ?> class="checkbox" />
 				            </div>
 				            <label for="is_subscribed"><?php echo $this->__('Sign Up for Newsletter') ?></label>
 				        </li>
