--- a/app/design/frontend/default/rooja/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/forgotpassword.phtml
@@ -31,23 +31,36 @@
 	<p id="highlight" class="tr">Apparel and accessories from leading International and Indian designers at prices you just can’t get in the stores</p>
 </header><!--End Header-->
 <section id="content" class="body">
-        <h2 class="legend"><?php echo $this->__('Retrieve your password here') ?></h2>
-        <p><?php echo $this->__('Please enter your email below and we will send you a new password.') ?></p>
+        <h2 id="retrievePassword" class="tr"><?php echo $this->__('Retrieve your password here') ?></h2>
+        <p><?php echo $this->__('Enter your email below and we will send you a new password.') ?></p>
 <form action="<?php echo $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-validate">
                     <input type="text" name="email" alt="email" id="email_address" class="input-text required-entry validate-email" value="<?php echo $this->htmlEscape($this->getEmailValue()) ?>" />
 		<input type="submit" id="submitBtn" value="Submit" name="submitBtn">
 	</form>
 	
+	<h2 id="getEarlyAccess" class="tr">Get Early Access</h2>
+	<a href="#" id="getOnList" class="tr">Get on the list now</a>
+	
 		
 </section><!--End Content-->
 </div>
-	<section id="brands">
-		<ul>
-			<li class="one"><img src="<?php echo $this->getSkinUrl('images/splash/logos/marc-jacobs.png') ?>" alt="Marc Jacobs"></li>
-			<li class="two"><img src="<?php echo $this->getSkinUrl('images/splash/logos/calvin-klein.png') ?>" alt="Calvin Klein"></li>
-			<li class="last three"><img src="<?php echo $this->getSkinUrl('images/splash/logos/burberry.png') ?>" alt="Burberry"></li>
-		</ul>
-	</section>
+<section id="brands">
+	<div id="brandCol1" class="brandCol fl">
+		<img src="<?php echo $this->getSkinUrl('images/splash/logos/marc-jacobs.png') ?>" alt="Marc Jacobs">
+		<img src="<?php echo $this->getSkinUrl('images/splash/logos/boss.png') ?>" alt="Hugo Boss">
+		<img src="<?php echo $this->getSkinUrl('images/splash/logos/gucci.png') ?>" alt="gucci">
+	</div>
+	<div id="brandCol2" class="brandCol fl">
+		<img src="<?php echo $this->getSkinUrl('images/splash/logos/calvin-klein.png') ?>" alt="Calvin Klein">
+		<img src="<?php echo $this->getSkinUrl('images/splash/logos/fendi.png') ?>" alt="Fendi">
+		<img src="<?php echo $this->getSkinUrl('images/splash/logos/versace.png') ?>" alt="versace">
+	</div>
+	<div id="brandCol3" class="brandCol last fl">
+		<img src="<?php echo $this->getSkinUrl('images/splash/logos/burberry.png') ?>" alt="Burberry">
+		<img src="<?php echo $this->getSkinUrl('images/splash/logos/lacoste.png') ?>" alt="Lacoste">
+		<img src="<?php echo $this->getSkinUrl('images/splash/logos/diesel.png') ?>" alt="Diesel">
+	</div>
+</section>
 </div>
 
 <script type="text/javascript">
