logged out page

--- a/app/design/frontend/default/rooja/template/customer/logout.phtml
+++ b/app/design/frontend/default/rooja/template/customer/logout.phtml
@@ -32,18 +32,11 @@
 	<p id="highlight" class="tr">Apparel and accessories from leading International and Indian designers at prices you just can’t get in the stores</p>
 </header><!--End Header-->
 <section id="content" class="body">
-    <h1><?php echo Mage::helper('customer')->__('You are now logged out') ?></h1>
+    <h2 id="nowLoggedOut" class="tr"><?php echo Mage::helper('customer')->__('You are now logged out') ?></h2>
 <p><?php echo Mage::helper('customer')->__('You have logged out and will be redirected to our homepage in 5 seconds.') ?></p>
 		
 </section><!--End Content-->
 </div>
-	<section id="brands">
-		<ul>
-			<li class="one"><img src="<?php echo $this->getSkinUrl('images/splash/logos/marc-jacobs.png') ?>" alt="Marc Jacobs"></li>
-			<li class="two"><img src="<?php echo $this->getSkinUrl('images/splash/logos/calvin-klein.png') ?>" alt="Calvin Klein"></li>
-			<li class="last three"><img src="<?php echo $this->getSkinUrl('images/splash/logos/burberry.png') ?>" alt="Burberry"></li>
-		</ul>
-	</section>
 </div>
 
 <script type="text/javascript">
