--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -62,6 +62,11 @@ h1#logo{
     width:208px;height:16px;
     margin-bottom:15px;
 }
+#nowLoggedOut{
+    background-image:url(../images/splash/you-are-now-logged-out.png);
+    width:303px;height:16px;
+    margin-bottom:15px;
+}
 
 form{
 /*    border-bottom:5px solid #3b2243;*/
